[package]
name = "ssh-permit-a38"
description = "Central managment and deployment for SSH keys"
version = "0.0.1"
authors = ["Bernhard Janetzki <boerni@gmail.com>"]

[dependencies]
clap = "2.30"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
ssh2 = "0.3"
colored = "1.6"
difference = "2.0"
libgit2-sys = "0.6"
